maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:6: error: too many arguments for constructor Array: (_length: Int)Array[T]
        return new Array(j, i);
               ^ShortestPathMaze:3: error: type mismatch;
 found   : Unit
 required: Array[Int]
  for(i <- 0 to getWorldHeight() - 1) {
        ^